--- a/server_csv/public/Description_page/Css/style.css
+++ b/server_csv/public/Description_page/Css/style.css
@@ -143,36 +143,47 @@
 }
 
 /*--Description page--*/
-
-.title-description span {
+.title-project span {
     width: 375px;
+    font-size: 25px;
     font-weight: bold;
     margin: 5px;
     display: flex;
-    justify-content: center!important;
-    font-family: IBM Plex Sans!important;
-    border-bottom: groove #5e5e5e!important; 
+    justify-content: center;
+    font-family: Alumni Sans;
+    border-bottom: groove #5e5e5e; 
+}
+
+.title-description span {
+    width: 375px;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    font-family: Alumni Sans;
+    border-bottom: groove #5e5e5e; 
 }
 
 .description-form {
-    padding-left: 15px!important;
-    font-family: IBM Plex Sans!important;
+    padding-left: 15px;
+    font-family: Alumni Sans;
     display: flex;
     justify-content: center;
 }
 
-/* .project-form {
-    padding-left: 15px!important;
-    font-family: IBM Plex Sans!important;
+.project-form {
+    padding-left: 15px;
+    font-family: Alumni Sans;
     display: flex;
     justify-content: center;
-} */
+}
 
 /* .description-form textarea{
     width: 80%;
     height: 50px;
     padding: 0px;
-    font-family: IBM Plex Sans;
+    font-family: Alumni Sans;
     cursor: pointer;
     border-width: 0px;
 } */
@@ -188,22 +199,12 @@
 }
 
 .return-deescription span{
-    color: #000000!important;
-    font-family: IBM Plex Sans!important;
+    color: #000000;
+    font-family: Alumni Sans;
     font-size: 20px;
     margin-left: 16px;
 }
 
-.title-description span{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    font-family: IBM Plex Sans;
-    margin-top: 20px;
-    font-size: 25px;
-    font-weight: bold;
-    border-bottom: groove #5e5e5e
-}
 .project-control {
     width: 80%;
     height: 50px;
@@ -217,6 +218,7 @@
     background-attachment: fixed;
     background-size: cover;
 }
+
 .description-control {
     width: 80%;
     height: 50px;
@@ -231,10 +233,9 @@
     background-size: cover;
 }
 
-
 .assign-to{
     margin: 0px 0px 20px 20px;
-    
+    font-family: Alumni Sans;
 }
 
 .assign-to h2 {
@@ -253,23 +254,28 @@
     margin-left: 5px;   
 }
 
-.due-date {
+.due-date{
+    font-family: Alumni Sans;
     margin: 0px 0px 20px 20px;
-    
 }
 
-.descriptionpopup{
+.descriptionPopup{
+    text-align: center;
     background-color: rgba(255, 255, 255, 0.699);
+    background-color: white;
+    opacity: 0.95;
 }
 
 .descriptionPopup-wrapper{
     background: rgba(0, 0, 0 0.7);
-    position: relative;
+    position: fixed;
     top: 0px;
     right: 0px;
     width: 100%;
     height: 100%;
     z-index: 10;
+    display: flex;
+    justify-content: center;
 }
 
 .descriptionPopup{
@@ -286,15 +292,16 @@
     border: 0px;
     padding: 14px 25px;
     border-radius: 10px;
-    
 }
 
 .descriptionPopup-wrapper #Confirm{
 background-color: rgb(8, 85, 230);
+font-family: Alumni Sans;
 }
 
 .descriptionPopup-wrapper #Cancel{
 background-color: rgb(8, 148, 104);
+font-family: Alumni Sans;
 }
 
 .descriptionPopup-wrapper{
@@ -312,19 +319,37 @@ background-color: rgb(8, 148, 104);
 
 /*--Add On Description page--*/
 
+.addonTitle-project span {
+    width: 375px;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    font-family: Alumni Sans;
+    border-bottom: groove #5e5e5e; 
+}
+
 .addonTitle-description span {
     width: 375px;
     font-weight: bold;
     margin: 5px;
     display: flex;
-    justify-content: center!important;
-    font-family: IBM Plex Sans!important;
-    border-bottom: groove #5e5e5e!important;
+    justify-content: center;
+    font-family: Alumni Sans;
+    border-bottom: groove #5e5e5e;
+}
+
+.addonProject-form {
+    padding-left: 15px;
+    font-family: Alumni Sans;
+    display: flex;
+    justify-content: center;
 }
 
 .addonDescription-form {
-    padding-left: 15px!important;
-    font-family: IBM Plex Sans!important;
+    padding-left: 15px;
+    font-family: Alumni Sans;
     display: flex;
     justify-content: center;
 }
@@ -333,10 +358,11 @@ background-color: rgb(8, 148, 104);
     width: 80%;
     height: 50px;
     padding: 0px;
-    font-family: IBM Plex Sans;
+    font-family: Alumni Sans;
     cursor: pointer;
     border-width: 0px;
 }
+
 /* .return-deescription{
     margin: 10px;
     height: 18.88px;
@@ -349,7 +375,7 @@ background-color: rgb(8, 148, 104);
 
 .return-deescription span{
     color: #000000!important;
-    font-family: IBM Plex Sans!important;
+    font-family: Alumni Sans!important;
     font-size: 20px;
     margin-left: 16px;
 } */
@@ -358,11 +384,25 @@ background-color: rgb(8, 148, 104);
     width: 100%;
     display: flex;
     justify-content: center;
-    font-family: IBM Plex Sans;
+    font-family: Alumni Sans;
     margin-top: 20px;
     font-size: 25px;
     font-weight: bold;
     border-bottom: groove #5e5e5e
+}
+
+.addonProject-control {
+    width: 80%;
+    height: 50px;
+    border-width: 0px;
+    color: #0C2D48;
+    font-size: 20px;
+    font-style: bold;
+    cursor: pointer;
+    background-image: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .addonDescription-control {
@@ -379,10 +419,9 @@ background-color: rgb(8, 148, 104);
     background-size: cover;
 }
 
-
 .addonAssign-to{
     margin: 0px 0px 20px 20px;
-    
+    font-family: Alumni Sans;
 }
 
 .addonAssign-to h2 {
@@ -403,24 +442,31 @@ background-color: rgb(8, 148, 104);
 
 .addonDue-date {
     margin: 0px 0px 20px 20px;
-    
+    font-family: Alumni Sans;
 }
 
-.addonDescriptionpopup{
+.addonDescriptionPopup{
+    text-align: center;
     background-color: rgba(255, 255, 255, 0.699);
+    background-color: white;
+    opacity: 0.95;
 }
 
 .addonDescriptionPopup-wrapper{
     background: rgba(0, 0, 0 0.7);
-    position: relative;
+    position: fixed;
     top: 0px;
     right: 0px;
     width: 100%;
     height: 100%;
     z-index: 10;
+    display: flex;
+    justify-content: center;
 }
 
 .addonDescriptionPopup{
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.699);
     background-color: white;
     opacity: 0.95;
     
@@ -439,26 +485,22 @@ background-color: rgb(8, 148, 104);
 
 .addonDescriptionPopup-wrapper #addonConfirm{
 background-color: rgb(8, 85, 230);
+font-family: Alumni Sans;
 }
 
 .addonDescriptionPopup-wrapper #addonCancel{
 background-color: rgb(8, 148, 104);
+font-family: Alumni Sans;
 }
 
-.addonDescriptionPopup-wrapper{
-    background: rgba(0, 0, 0 0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-}
 
 /*--Add On Description page--*/
 
 /*---popup html---*/
+
+.pop-content{
+    font-family: Alumni Sans;
+}
 
 .popup-wrapper{
     background: rgba(0, 0, 0 0.7);
@@ -529,7 +571,7 @@ background-color: rgb(8, 148, 104);
 
 .status span {
     color: #000000;
-    font-family: IBM Plex Sans;
+    font-family: Alumni Sans;
     font-size: 20px;
     margin-left: 16px;
 }
@@ -588,7 +630,6 @@ input#checkbox {
     width: 25%;
     height: 25%;
 }
-
 
 /*---search bar---*/
 .searchbarpopup{
