--- a/server_csv/public/Description_page/Css/style.css
+++ b/server_csv/public/Description_page/Css/style.css
@@ -1,89 +1,22 @@
-/* login page */
-
-.loginbg {
-    background: linear-gradient(
-360deg
-, black, #7a7a7a);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-}
-
-.login {
-    width: 80%;
-    height: 90%;
-    background-color: rgb(255 255 255 / 18%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 50px;
-}
-
-.login-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.login img {
-    width: 90px;
-    margin-bottom: 20px;
-}
-
-.login-username {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 120%;
-}
-
-.login-name {
-    margin-bottom: 20px;
-}
-
-.forgot {
-    margin-bottom: 20px;
-}
-
 
 /*--Description page--*/
 
-/* .description {
-    background-color: #EFF3F4;
-}
-
-.return-deescription {
-    margin-left: 8px;
-    height: 18.88px;
-    width: auto;
-}
-
-.arrow-left-deescription a {
-    color: #5e5e5e!important;
-} */
-
-
-/*--login page--*/
-
-
-/*--home page--*/
-
-#calendar .fc-scrollgrid-sync-table a {
-    font-size: 18px;
-    color: black;
+.mediaNav {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 625px;
+    display: flex;
+    flex-direction: column;
+    font-family: Alumni Sans;
+    color: rgb(68, 68, 68);
     text-decoration: none;
+    line-height: 1;
+    margin: 0;
 }
 
-#calendar .fc-col-header-cell-cushion {
-    color: black;
-    text-decoration: none;
-}
-
-#calendar {
-    margin: 13px;
+.mediaDate{
+    font-family: Alumni Sans;
+    font-size: 25px;
 }
 
 .navbar-brand .fas,
@@ -93,7 +26,17 @@
     top: 1px;
 }
 
-.media {
+.addTask{
+    display: flex;
+}
+
+.mediaContent{
+    width: 100%;
+    border: none;
+    background: none;
+    padding: 10px;
+    outline: none;
+    font-size: 18px;
     display: flex;
     margin: 13px;
     background: linear-gradient(90deg, #dadada, transparent);
@@ -143,6 +86,7 @@
 }
 
 /*--Description page--*/
+
 .title-project span {
     width: 375px;
     font-size: 25px;
@@ -152,6 +96,22 @@
     justify-content: center;
     font-family: Alumni Sans;
     border-bottom: groove #5e5e5e; 
+}
+.mediaArrow ::before{
+    text-decoration:none;
+    margin-left: 10px;
+    color: rgb(68, 68, 68);
+    font-size: 20px;
+}
+
+.mediaToday span{
+    margin-left: 10px;
+    color: rgb(68, 68, 68);
+    font-family: Alumni Sans;
+}
+
+.mediadate{
+    margin: 20px 0px 10px 35px;
 }
 
 .title-description span {
@@ -364,23 +324,6 @@ font-family: Alumni Sans;
     border-width: 0px;
 }
 
-/* .return-deescription{
-    margin: 10px;
-    height: 18.88px;
-    width: auto;
-}
-
-.arrow-left-deescription a{
-    color:#5e5e5e!important;
-}
-
-.return-deescription span{
-    color: #000000!important;
-    font-family: Alumni Sans!important;
-    font-size: 20px;
-    margin-left: 16px;
-} */
-
 .addonTitle-description span{
     width: 100%;
     display: flex;
@@ -495,17 +438,16 @@ background-color: rgb(8, 148, 104);
 font-family: Alumni Sans;
 }
 
-
 /*--Add On Description page--*/
 
 /*---popup html---*/
 
 .pop-content{
     font-family: Alumni Sans;
-    width: 409px;
+   
 }
 
-.popup-wrapper{
+#popupid .popup-wrapper{
     background: rgba(0, 0, 0 0.7);
     position: relative;
     top: 0px;
@@ -513,11 +455,16 @@ font-family: Alumni Sans;
     width: 100%;
     height: 100%;
     z-index: 10;
+    transition: all 10s;
+    top: 200vh;
 }
 
 .hide{
     display: none;
+    transition: all 10s;
+    top: 200vh;
 }
+
 
 .popup{
     text-align: center;
@@ -559,150 +506,3 @@ background-color: rgb(8, 148, 104);
     height: 100%;
 }
 /*---popup html---*/
-
-/*---User page---*/
-
-.status {
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 625px;
-    display: flex;
-    flex-direction: column;
-}
-
-.status h5 {
-    color: rgb(48, 48, 48);
-    margin: 20px;
-}
-
-.status a {
-    color:#5e5e5e;
-}
-
-.status span {
-    color: #000000;
-    font-family: Alumni Sans;
-    font-size: 20px;
-    margin-left: 16px;
-}
-
-.status h1 {
-    color: rgb(48, 48, 48);
-    margin-left: 20px;
-}
-
-.today {
-    margin: 10px;
-    width: auto;
-}
-
-.date {
-    margin: 20px 0px 10px 10px;
-}
-
-.task {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.taskbg {
-    background: linear-gradient(
-90deg
-, #dadada, transparent);
-    width: 90%;
-    height: 85px;
-    display: flex;
-    border-radius: 30px;
-    margin-bottom: 20px;
-}
-
-hr {
-    height: 5px;
-}
-
-.taskcheck {
-    flex: 1;
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.tasks {
-    flex: 3;
-    display: flex;
-    align-items: center;
-}
-
-input#checkbox {
-    width: 25%;
-    height: 25%;
-}
-
-/*---search bar---*/
-.searchbarpopup{
-    text-align: center;
-    background-color: white;
-    opacity: 0.85;
-    position: absolute;
-    right: 20px;
-    top: 15px;
-    font-size: 20px;
-    color: black;
-    font-weight: bold;
-}
-
-.searchbarpopup-wrapper{
-    background: rgba(0, 0, 0 0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-
-.hide{
-    display: none;
-}
-
-.searchbarpop-content{
-    box-sizing: border-box;
-}
-      
-#searchbar {
-background-image: url('/css/searchicon.png');
-background-position: 10px 12px;
-background-repeat: no-repeat;
-width: 100%;
-font-size: 16px;
-padding: 12px 20px 12px 40px;
-border: 1px solid #ddd;
-margin-bottom: 12px;
-}
-      
-#myUL {
-list-style-type: none;
-padding: 0;
-margin: 0;
-}
-      
-#myUL li a {
-border: 1px solid #ddd;
-margin-top: -1px; 
-background-color: #f6f6f6;
-padding: 12px;
-text-decoration: none;
-font-size: 18px;
-color: black;
-display: block
-}
-      
-#myUL li a:hover:not(.header) {
-background-color: #eee;
-}
-
-
-/* popup */
