--- a/server_csv/public/Description_page/Css/style.css
+++ b/server_csv/public/Description_page/Css/style.css
@@ -1,5 +1,52 @@
 
 /*--Description page--*/
+*{
+    font-family: Alumni Sans;
+}
+
+/* .banner{
+    width: 100%;
+    height: 300px;
+    position: relative;
+
+    }
+    .wave{
+        background-color: #b1d5f3;
+        width: 200vw;
+        height: 200vh;
+
+} */
+.wave {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: blue;
+}
+
+.wave {
+    width: 200vw;
+    height: 200vh;
+    border-top-right-radius: 150px;
+    border-top-left-radius: 150px;
+    border-bottom-right-radius: 150px;
+    border-bottom-left-radius: 140px;
+    background: #adcbfe;
+}
+.wave {
+    width: 200vw;
+    height: 200vh;
+    border-top-right-radius: 150px;
+    border-top-left-radius: 150px;
+    border-bottom-right-radius: 150px;
+    border-bottom-left-radius: 140px;
+    background: #adcbfe;
+    animation: wave 4s linear infinite;
+}
+
+@keyframes wave {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
 
 .mediaNav {
     background-color: rgb(255, 255, 255);
@@ -7,7 +54,6 @@
     height: 625px;
     display: flex;
     flex-direction: column;
-    font-family: Alumni Sans;
     color: rgb(68, 68, 68);
     text-decoration: none;
     line-height: 1;
@@ -15,7 +61,6 @@
 }
 
 .media {
-    font-family: Alumni Sans;
     display: flex;
     margin: 13px;
     background: linear-gradient(90deg, #dadada, transparent);
@@ -41,11 +86,12 @@
     align-items: flex-end;
 }
 
-
-
 .mediaDate{
-    font-family: Alumni Sans;
     font-size: 25px;
+}
+
+#mediadate{
+    margin-left: 35px;
 }
 
 .navbar-brand .fas,
@@ -123,7 +169,6 @@
     margin: 5px;
     display: flex;
     justify-content: center;
-    font-family: Alumni Sans;
     border-bottom: groove #5e5e5e; 
 }
 .mediaArrow ::before{
@@ -136,7 +181,6 @@
 .mediaToday span{
     margin-left: 10px;
     color: rgb(68, 68, 68);
-    font-family: Alumni Sans;
 }
 
 .mediadate{
@@ -150,20 +194,17 @@
     margin: 5px;
     display: flex;
     justify-content: center;
-    font-family: Alumni Sans;
     border-bottom: groove #5e5e5e; 
 }
 
 .description-form {
     padding-left: 15px;
-    font-family: Alumni Sans;
     display: flex;
     justify-content: center;
 }
 
 .project-form {
     padding-left: 15px;
-    font-family: Alumni Sans;
     display: flex;
     justify-content: center;
 }
@@ -189,7 +230,6 @@
 
 .return-deescription span{
     color: #000000;
-    font-family: Alumni Sans;
     font-size: 20px;
     margin-left: 16px;
 }
@@ -206,6 +246,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    resize: none;
 }
 
 .description-control {
@@ -220,11 +261,11 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    resize: none;
 }
 
 .assign-to{
     margin: 0px 0px 20px 20px;
-    font-family: Alumni Sans;
     height: 85px
 }
 
@@ -245,7 +286,6 @@
 }
 
 .due-date{
-    font-family: Alumni Sans;
     margin: 20px 0px 0px 20px;
 }
 
@@ -286,12 +326,10 @@
 
 .descriptionPopup-wrapper #Confirm{
 background-color: rgb(8, 85, 230);
-font-family: Alumni Sans;
 }
 
 .descriptionPopup-wrapper #Cancel{
 background-color: rgb(8, 148, 104);
-font-family: Alumni Sans;
 }
 
 .descriptionPopup-wrapper{
@@ -316,7 +354,6 @@ font-family: Alumni Sans;
     margin: 5px;
     display: flex;
     justify-content: center;
-    font-family: Alumni Sans;
     border-bottom: groove #5e5e5e; 
 }
 
@@ -326,20 +363,17 @@ font-family: Alumni Sans;
     margin: 5px;
     display: flex;
     justify-content: center;
-    font-family: Alumni Sans;
     border-bottom: groove #5e5e5e;
 }
 
 .addonProject-form {
     padding-left: 15px;
-    font-family: Alumni Sans;
     display: flex;
     justify-content: center;
 }
 
 .addonDescription-form {
     padding-left: 15px;
-    font-family: Alumni Sans;
     display: flex;
     justify-content: center;
 }
@@ -348,7 +382,6 @@ font-family: Alumni Sans;
     width: 80%;
     height: 50px;
     padding: 0px;
-    font-family: Alumni Sans;
     cursor: pointer;
     border-width: 0px;
 }
@@ -357,7 +390,6 @@ font-family: Alumni Sans;
     width: 100%;
     display: flex;
     justify-content: center;
-    font-family: Alumni Sans;
     margin-top: 20px;
     font-size: 25px;
     font-weight: bold;
@@ -376,6 +408,7 @@ font-family: Alumni Sans;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    resize: none;
 }
 
 .addonDescription-control {
@@ -390,11 +423,11 @@ font-family: Alumni Sans;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    resize: none;
 }
 
 .addonAssign-to{
     margin: 0px 0px 20px 20px;
-    font-family: Alumni Sans;
     height: 85px;
 }
 
@@ -416,7 +449,6 @@ font-family: Alumni Sans;
 
 .addonDue-date {
     margin: 20px 0px 0px 20px;
-    font-family: Alumni Sans;
 }
 
 .addonDescriptionPopup{
@@ -459,22 +491,16 @@ font-family: Alumni Sans;
 
 .addonDescriptionPopup-wrapper #addonConfirm{
 background-color: rgb(8, 85, 230);
-font-family: Alumni Sans;
 }
 
 .addonDescriptionPopup-wrapper #addonCancel{
 background-color: rgb(8, 148, 104);
-font-family: Alumni Sans;
 }
 
 /*--Add On Description page--*/
 
 /*---popup html---*/
 
-.pop-content{
-    font-family: Alumni Sans;
-   
-}
 
 #popupid .popup-wrapper{
     background: rgba(0, 0, 0 0.7);
