--- a/Project/src/page/home/Home.module.css
+++ b/Project/src/page/home/Home.module.css
@@ -84,7 +84,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.8;
+  opacity: 0.7;
 }
 .overlay {
   position: absolute;
@@ -119,6 +119,13 @@
   animation: fadeIn 10s;
 }
 
+.button {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 100px;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -142,8 +149,8 @@
   overflow: hidden;
   background: linear-gradient(
     90deg,
-    rgba(154, 62, 182, 0.308),
-    rgb(173, 77, 157)
+    rgba(255, 255, 255, 0.408),
+    rgb(77, 166, 173)
   );
   text-align: center;
 }
@@ -151,6 +158,10 @@
 @media (max-width: 991px) {
   .showcase,
   .showcase header {
-    padding: 40px;
+    padding: 50px;
+  }
+
+  .text h2 {
+    text-align: center;
   }
 }
