--- a/Project/src/page/login/Login.css
+++ b/Project/src/page/login/Login.css
@@ -1,5 +1,5 @@
 .loginbg {
-  background: rgb(255, 209, 241);
+  background: rgb(112, 214, 255);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,14 +78,14 @@
 }
 .loginbt input {
   background: none;
-  color: #fff;
-  font-size: 18px;
+  color: rgb(0, 0, 0);
+  font-size: 30px;
   text-transform: uppercase;
   outline: none;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
   padding: 2px;
-  width: 99px;
+  width: 150px;
   height: 44px;
 }
 .webNav {
