--- a/Project/src/page/singin/Signin.css
+++ b/Project/src/page/singin/Signin.css
@@ -1,5 +1,9 @@
 .loginbg {
-  background: rgb(255, 209, 241);
+  background: linear-gradient(
+    90deg,
+    rgb(148, 255, 250),
+    rgb(0, 230, 247)
+  );
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,8 +29,8 @@
 }
 
 .login img {
-  width: 90px;
-  margin-bottom: 20px;
+  width: 150px;
+  margin-bottom: 50px;
 }
 
 .login-username {
@@ -36,6 +40,7 @@
   font-size: 120%;
 }
 .login-password {
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 #username {
@@ -43,18 +48,18 @@
   border: none;
   border-bottom: 2px solid rgb(7, 7, 7);
   background: none;
-  padding: 10px;
+  padding: 20px;
   outline: none;
-  font-size: 18px;
+  font-size: 30px;
 }
 #user-pw {
   width: 100%;
   border: none;
   border-bottom: 2px solid rgb(7, 7, 7);
   background: none;
-  padding: 10px;
+  padding: 20px;
   outline: none;
-  font-size: 18px;
+  font-size: 30px;
 }
 
 .signbt {
@@ -63,7 +68,7 @@
 .signbt input {
   background: none;
   color: #fff;
-  font-size: 18px;
+  font-size: 30px;
   text-transform: uppercase;
   outline: none;
   border-radius: 5px;
